src/objects/PurchaseDetail__c.object
<CustomObject>
    <fields>
        <fullName>AccountMasterRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計商品</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>仕入明細</relationshipLabel>
        <relationshipName>AccountMasterRefLUWM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountMasterUnit__c</fullName>
        <label>単位</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostDenpyoukeiIncTax__c</fullName>
        <label>計(税込)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostDenpyoukei__c</fullName>
        <label>計(税抜)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostPrice__c</fullName>
        <label>原価</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InStockDate__c</fullName>
        <description>仕入の日付、YYYYMMDD</description>
        <externalId>true</externalId>
        <label>入庫日</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLockFlg__c</fullName>
        <formula>PurchaseRef__r.JinyaRevenue__r.IsLockFlg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ロックフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNotTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>在庫集計対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoTaxDefKbFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>税込</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <label>商品数量</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductStockRef__c</fullName>
        <label>商品在庫情報</label>
        <referenceTo>ProductStock__c</referenceTo>
        <relationshipLabel>仕入明細</relationshipLabel>
        <relationshipName>ProductStockRef</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PurchaseRef__c</fullName>
        <label>仕入(標準)</label>
        <referenceTo>Purchase__c</referenceTo>
        <relationshipLabel>仕入明細</relationshipLabel>
        <relationshipName>Purchasegvu5</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TaxRateCal__c</fullName>
        <formula>IF (TaxRate__c == 0, 0.0008, TaxRate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$消費税</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>消費税</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TaxType__c</fullName>
        <label>税種</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>税抜</fullName>
                </value>
                <value>
                    <fullName>税込</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>仕入明細</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccountMasterRef__c</columns>
        <columns>IsNotTarget__c</columns>
        <columns>PurchaseRef__c</columns>
        <columns>ProductStockRef__c</columns>
        <columns>ProductNumber__c</columns>
        <columns>InStockDate__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>PD-{0000000000}</displayFormat>
        <label>仕入明細No#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>